...
                    .toolbar {
                        NavigationLink {
                            CartViewBuilder.start()
                        } label: {
                            ReviCartView(cartItem: viewModel.cartItemCount)
                                .accessibilityAddTraits(.isButton)
                                .accessibilityIdentifier("cartViewButton")
                        }
                    }
                }.edgesIgnoringSafeArea(.all)
            }.overlay(alignment: .bottom) {
                
                Button {
...
                                .foregroundColor(.green)
                        }
                        Spacer()
                    }
                }.buttonStyle(ReviDefaultButtonStyle())
                    .padding([.leading, .trailing], ReviUIConfig.Padding.medium)
                    .accessibilityIdentifier("addToCartButton")
                
            }
        }
    }
}

...
